--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
 }
-.keyboard button {
+:where(.game-modal, .keyboard) button {
     color: #fff;
     font-size: 1rem;
     font-weight: 600;
@@ -83,8 +83,45 @@ body {
     background: #5E63BA;
     border-radius: 4px;
     text-transform: uppercase;
+}
+.keyboard button {
+    padding: 7px;
     width: calc(100% / 9 - 5px);
 }
-.keyboard button:hover {
+:where(.game-modal, .keyboard) button:hover {
     background: #8286c9;
+}
+.game-modal{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0,0.6); 
+} 
+.game-modal .content {
+    background: #fff;
+    max-width: 420px;
+    width: 100%;
+    text-align: center;
+    border-radius: 10px;
+    padding: 30px;
+}
+.game-modal img{
+    max-width: 130px;
+} 
+.game-modal h4{
+    font-size: 1.53rem;
+}
+.game-modal p {
+    font-size: 1.15rem;
+    margin: 15px 0 30px;
+    font-weight: 500;
+}
+.game-modal p b{
+    color: #5E63BA;
+    font-weight: 600;
 }
