--- a/style.css
+++ b/style.css
@@ -65,30 +65,29 @@ body {
 .game-box .guesses-text b {
     color: #ff0000;
 }
-.game-box .keyboard {
+.game-box .keyboard{
     display: flex;
     gap: 5px;
-    margin-top: 40px;
     flex-wrap: wrap;
     justify-content: center;
 }
+
 :where(.game-modal, .keyboard) button {
     color: #fff;
     font-size: 1rem;
     font-weight: 600;
     cursor: pointer;
     outline: none;
-    padding: 7px;
     border: none;
     background: #5E63BA;
     border-radius: 4px;
     text-transform: uppercase;
-}
+} 
 .keyboard button {
     padding: 7px;
     width: calc(100% / 9 - 5px);
 }
-:where(.game-modal, .keyboard) button:hover {
+:where(.game-modal, .keyboard) button:hover{
     background: #8286c9;
 }
 .game-modal{
@@ -97,7 +96,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     background: rgba(0,0,0,0.6); 
@@ -125,3 +124,20 @@ body {
     color: #5E63BA;
     font-weight: 600;
 }
+.game-modal button{
+    padding: 12px 23px;
+}
+
+@media (max-width: 782px) {
+    .container {
+        flex-direction: column;
+        padding: 30px 15px;
+        align-items: center;
+    }
+    .hangman-box img {
+        max-width: 200px;
+    }
+    .hangman-box h1 {
+        display: none;
+    }
+} 
