--- a/style.css
+++ b/style.css
@@ -87,6 +87,11 @@ body {
     padding: 7px;
     width: calc(100% / 9 - 5px);
 }
+.keyboard button[disabled]{
+    opacity: 0.6;
+    pointer-events: none;
+
+}
 :where(.game-modal, .keyboard) button:hover{
     background: #8286c9;
 }
@@ -96,11 +101,20 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    display: none;
+    opacity: 0;
+    padding: 0 10px;
+    pointer-events: none;
+    z-index: 999;
+    display: flex;
     align-items: center;
     justify-content: center;
     background: rgba(0,0,0,0.6); 
+    transition: opacity 0.4s ease;
 } 
+.game-modal.show {
+    opacity: 1;
+    pointer-events: auto;
+}
 .game-modal .content {
     background: #fff;
     max-width: 420px;
